# FastAPI

./: main.py  notes.md  observations.md
basic_task_management_apis/: README.md  app.py  observations.md  tasks.db  template.html
basic_task_management_apis/templates/: 404.html  index.html
expense_tracker/: README.md  expenses.db  main.py
expense_tracker/templates/: 404.html  index.html
fast_api_crash_course/: main.py  notes.md
fastapi_beginner/: main.py
fastapi_intemediate/: main.py
fastapi_intemediate/blog/: databse.py  main.py  models.py  schemas.py
lecture-1/: main.py
mlops/: .gitignore  main.py  notes.md  requirements.txt
restaurant_online_order/: .gitignore  README.md
restaurant_online_order/backend/: Dockerfile  auth.py  cache.py  database.py  docker-compose.yml  dockerignore  main.py  models.py  requirements.txt  restaurants.db  routes.py  schemas.py
restaurant_online_order/frontend/: index.html
ticket_booking_crud/: .gitignore  PRD_Ticket_Booking_System.md  create_tables.py  main.py  pyproject.toml  requirements.txt  test_app.py  todo.md
ticket_booking_crud/app/: __init__.py  database.py  main.py  models.py  schemas.py
ticket_booking_system/: expenses.db  main.py  pyproject.toml
ticket_booking_system/templates/: index.html
university-course-management-system/: database.py  main.py  models.py  schemas.py  university-data.db
university-course-management-system/routers/: course.py  enrollment.py  (+2 more)
user_authentication_system/: auth.py  database.py  index.html  main.py  models.py  rate_limiter.py  schemas.py  test.db  utils.py
(+10 files in other folders)
