[project]
name = "ticket-booking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databases>=0.9.0",
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]
